--- a/app/src/main/res/layout/custom_tweet_layout.xml
+++ b/app/src/main/res/layout/custom_tweet_layout.xml
@@ -7,8 +7,9 @@
         android:id="@+id/list_item_string"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
+        android:layout_toLeftOf="@+id/retweet_btn"
         android:paddingLeft="8dp"
         android:textSize="18sp"
         android:textStyle="bold" />
