--- a/app/src/main/res/layout/twitter_tab_fragment.xml
+++ b/app/src/main/res/layout/twitter_tab_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/twitter_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,17 +9,17 @@
     <ListView
         android:id="@+id/tweet_list_view"
         android:layout_width="210dp"
-        android:layout_height="match_parent"
+        android:layout_height="400dp"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentTop="false" />
 
     <com.twitter.sdk.android.core.identity.TwitterLoginButton
         android:id="@+id/twitter_login_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentBottom="false"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/tweet_list_view" />
 
 </RelativeLayout>
